--- a/UFO_shapes.html
+++ b/UFO_shapes.html
@@ -1,92 +1,87 @@
 <!doctype html>
 <html lang="en-us">
+
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1" name="viewport">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>US_UFO_Sightings</title>
-    <!-- reset styling -->
-    <link rel="stylesheet" href="css/reset.css">
-    <!-- Boostrap Stylesheet -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <!-- Our own CSS stylesheet -->
-    <link rel="stylesheet" href="css/styles.css" media="screen">
-  <meta name="keywords" content="css3, html5, js, background video, fullscreen video">
-  <meta name="description" content="description">
-
-  <script src="https://use.typekit.net/nlq1kdt.js"></script>
-  <script>try{Typekit.load({ async: true });}catch(e){}</script>
+  <!-- reset styling -->
+  <link rel="stylesheet" href="./static/css/reset.css">
+  <!-- Boostrap Stylesheet -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+  <!-- Our own CSS stylesheet -->
+  <link rel="stylesheet" href="./static/css/styles.css" media="screen">
 </head>
+
 <body>
 
-  <div id="container">
+  <!-- Create a <canvas> element -->
+  <canvas id="canvas-image-blending"></canvas>
 
-    <!-- Create a <canvas> element -->
-    <canvas id="canvas-image-blending"></canvas>
+  <!-- Call the script -->
+  <script src="plugin_granim/dist/granim.js"></script>
 
-    <!-- Call the script -->
-    <script src="plugin_granim/dist/granim.js"></script>
-
-    <!-- Create a Granim instance -->
-    <script>
+  <!-- Create a Granim instance -->
+  <script>
     let granimInstance = new Granim({
-        element: '#canvas-image-blending',
-        direction: 'top-bottom',
-        isPausedWhenNotInView: true,
-        image : {
-            source: "../Group-Project-3/plugin_granim/docs/assets/img/bg-forest-fullscreen.jpg",
-            blendingMode: 'multiply',
-            stretchMode: ['stretch', 'stretch'],
-        },
-        states : {
-            "default-state": {
-                gradients: [
-                    ['#29323c', '#485563'],
-                    ['#FF6B6B', '#556270'],
-                    ['#80d3fe', '#7ea0c4'],
-                    ['#f0ab51', '#eceba3']
-                ],
-                transitionSpeed: 9000
-            }
+      element: '#canvas-image-blending',
+      direction: 'top-bottom',
+      isPausedWhenNotInView: true,
+      image: {
+        source: "../Group-Project-3/plugin_granim/docs/assets/img/bg-forest-fullscreen.jpg",
+        blendingMode: 'multiply',
+        stretchMode: ['stretch', 'stretch'],
+      },
+      states: {
+        "default-state": {
+          gradients: [
+            ['#29323c', '#485563'],
+            ['#FF6B6B', '#556270'],
+            ['#80d3fe', '#7ea0c4'],
+            ['#f0ab51', '#eceba3']
+          ],
+          transitionSpeed: 9000
         }
+      }
     });
-    </script>
+  </script>
 
-    <!-- Start of navbar -->
-    <nav class="navbar navbar-expand m-0 p-0">
-        <a href="index.html" class="navbar-brand" id="home-button">
-            Home
-        </a>
-        
-        <div class="collapse navbar-collapse justify-content-end" id="main-nav">
-          <ul class="navbar-nav">
-            <li class="nav-item">
-                <a href="index.html" class="nav-link">Sightings Heatmap</a>
-            </li>
-            <li class="nav-item">
-                <a href="index.html" class="nav-link">UFO Shapes</a> <!-- pie charts -->
-            </li>
-            <li class="nav-item">
-                <a href="index.html" class="nav-link">Sightings by Time of Day</a>
-            </li>
-          </ul>
+  <!-- Start of navbar -->
+  <nav class="navbar navbar-expand m-0 p-0">
+    <a href="index.html" class="navbar-brand" id="home-button">Home</a>
+    <div class="collapse navbar-collapse justify-content-end" id="main-nav">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a href="index.html" class="nav-link">Sightings Heatmap</a>
+        </li>
+        <li class="nav-item">
+          <a href="UFO_shapes.html" class="nav-link">UFO Shapes</a> <!-- pie charts -->
+        </li>
+        <li class="nav-item">
+          <a href="index.html" class="nav-link">Sightings by Time of Day</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
+  <!-- End of navbar -->
 
-      </div>
-    </nav>
-    <!-- End of navbar -->
-
-    <div class="row">
-      <div class="col-6">
+  <div class="container-fluid">
+    <div class="row justify-content-center">
+      <div class="col-md-5 content-background" id="selectedStateName">
         <!-- Start of State Pie Chart -->
-        
+        <h3>Alabama<select id="selDataset" onchange="optionChanged(this.value)"></select></h3>
+        <div id="statePieChart"></div>
         <!-- End of State Pie Chart -->
       </div>
-
-
-
-
+      <div class="col-md-5 content-background">
+        <!-- Start of National Pie Chart -->
+        <h3>United States</h3>
+        <div id="usPieChart"></div>
+        <!-- End of State Pie Chart -->
+      </div>
     </div>
-
   </div>
 
   <div id="footer">
@@ -95,8 +90,13 @@
     </a>
   </div>
 
-  <script src="plugin_bideo/bideo.js"></script>
-  <script src="plugin_bideo/main.js"></script>
+  <!-- <script src="plugin_bideo/bideo.js"></script>
+  <script src="plugin_bideo/main.js"></script> -->
+  <script src="https://d3js.org/d3.v5.min.js"></script>
+	<script src='https://cdn.plot.ly/plotly-2.16.1.min.js'></script>
+  <script src="static/js/usStates.js"></script>
+  <script src="static/js/UFO_shapes.js"></script>
 
 </body>
+
 </html>
