--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <meta content="width=device-width, initial-scale=1" name="viewport">
   <title>US_UFO_Sightings</title>
     <!-- reset styling -->
-    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="./static/css/reset.css">
     <!-- Boostrap Stylesheet -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <!-- Our own CSS stylesheet -->
-    <link rel="stylesheet" href="css/styles.css" media="screen">
+    <link rel="stylesheet" href="./static/css/styles.css" media="screen">
   <meta name="keywords" content="css3, html5, js, background video, fullscreen video">
   <meta name="description" content="description">
 
@@ -33,23 +33,19 @@
 
     <!-- Start of navbar -->
     <nav class="navbar navbar-expand m-0 p-0">
-        <a href="index.html" class="navbar-brand" id="home-button">
-            Home
-        </a>
-        
-        <div class="collapse navbar-collapse justify-content-end" id="main-nav">
-          <ul class="navbar-nav">
-            <li class="nav-item">
-                <a href="index.html" class="nav-link">Sightings Heatmap</a>
-            </li>
-            <li class="nav-item">
-                <a href="UFO_shapes.html" class="nav-link">UFO Shapes</a> <!-- pie charts -->
-            </li>
-            <li class="nav-item">
-                <a href="index.html" class="nav-link">Sightings by Time of Day</a>
-            </li>
-          </ul>
-
+      <a href="index.html" class="content-background" id="home-button">Home</a>
+      <div class="collapse navbar-collapse justify-content-end" id="main-nav">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a href="index.html" class="content-background">Sightings Heatmap</a>
+          </li>
+          <li class="nav-item">
+            <a href="UFO_shapes.html" class="content-background">UFO Shapes</a> <!-- pie charts -->
+          </li>
+          <li class="nav-item">
+            <a href="index.html" class="content-background">Sightings by Time of Day</a>
+          </li>
+        </ul>
       </div>
     </nav>
     <!-- End of navbar -->
@@ -65,7 +61,7 @@
 
   <div id="footer">
     <a href="https://www.youtube.com/watch?v=w7JrHIHi8t0" target="_blank">
-      Video by shortenit
+      Lorem ipsum dolor sit amet.
     </a>
   </div>
 
