working on fixing alignment on index page

--- a/UFO_shapes.html
+++ b/UFO_shapes.html
@@ -67,8 +67,8 @@
   </nav>
   <!-- End of navbar -->
 
-  <div class="container-fluid align-content-center">
-    <div class="row justify-content-center align-content-center">
+  <div class="container-fluid">
+    <div class="row justify-content-center">
       <div class="col-md-5 content-background">
         <!-- Start of State Pie Chart -->
         <h3 id="selectedStateName">ALABAMA  </h3><select id="selectedStateAbbrev" onchange="optionChanged(this.value)"></select>
