--- a/index.html
+++ b/index.html
@@ -37,25 +37,24 @@
       <div class="collapse navbar-collapse justify-content-end" id="main-nav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a href="index.html" class="content-background">Sightings Heatmap</a>
+            <a href="Sightings_Map.html" class="content-background">Sightings Heatmap</a>
           </li>
           <li class="nav-item">
             <a href="UFO_shapes.html" class="content-background">UFO Shapes</a> <!-- pie charts -->
           </li>
           <li class="nav-item">
-            <a href="index.html" class="content-background">Sightings by Time of Day</a>
+            <a href="Sightings_by_Time_of_Day.html" class="content-background">Sightings by Time of Day</a>
           </li>
         </ul>
       </div>
     </nav>
     <!-- End of navbar -->
 
-    <section id="main_content">
-      <div id="head">
+    <section class="content-background" id="index_page">
+      <div>
         <h1>The truth is out there.</h1>
-        <p class="sub_head">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
       </div>
-
     </section>
   </div>
 
