--- a/UFO_shapes.html
+++ b/UFO_shapes.html
@@ -54,13 +54,13 @@
     <div class="collapse navbar-collapse justify-content-end" id="main-nav">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a href="index.html" class="content-background">Sightings Heatmap</a>
+          <a href="Sightings_Map.html" class="content-background">Sightings Heatmap</a>
         </li>
         <li class="nav-item">
           <a href="UFO_shapes.html" class="content-background">UFO Shapes</a> <!-- pie charts -->
         </li>
         <li class="nav-item">
-          <a href="index.html" class="content-background">Sightings by Time of Day</a>
+          <a href="Sightings_by_Time_of_Day.html" class="content-background">Sightings by Time of Day</a>
         </li>
       </ul>
     </div>
