--- a/UFO_shapes.html
+++ b/UFO_shapes.html
@@ -21,7 +21,7 @@
   <canvas id="canvas-image-blending"></canvas>
 
   <!-- Call the script -->
-  <script src="plugin_granim/dist/granim.js"></script>
+  <script src="plugin_granim/dists/granim.js"></script>
 
   <!-- Create a Granim instance -->
   <script>
@@ -30,7 +30,7 @@
       direction: 'top-bottom',
       isPausedWhenNotInView: true,
       image: {
-        source: "../Group-Project-3/plugin_granim/docs/assets/img/bg-forest-fullscreen.jpg",
+        source: "./plugin_granim/docs/assets/img/bg-forest-fullscreen.jpg",
         blendingMode: 'multiply',
         stretchMode: ['stretch', 'stretch'],
       },
