--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1" name="viewport">
   <title>US_UFO_Sightings</title>
+    <!-- JQuery -->
+    <script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
     <!-- reset styling -->
     <link rel="stylesheet" href="./static/css/reset.css">
     <!-- Boostrap Stylesheet -->
@@ -32,22 +34,12 @@
     </div>
 
     <!-- Start of navbar -->
-    <nav class="navbar navbar-expand m-0 p-0">
-      <a href="index.html" class="content-background" id="home-button">Home</a>
-      <div class="collapse navbar-collapse justify-content-end" id="main-nav">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a href="Sightings_Map.html" class="content-background">Sightings Heatmap</a>
-          </li>
-          <li class="nav-item">
-            <a href="UFO_shapes.html" class="content-background">UFO Shapes</a> <!-- pie charts -->
-          </li>
-          <li class="nav-item">
-            <a href="Sightings_by_Time_of_Day.html" class="content-background">Sightings by Time of Day</a>
-          </li>
-        </ul>
-      </div>
-    </nav>
+    <script>
+      $(function() {
+         $("#navbarHtml").load("static/html/navbar.html");
+      });
+    </script>
+    <div id="navbarHtml"></div>
     <!-- End of navbar -->
 
     <section class="content-background" id="index_page">
