added dummy pages for other visualizations

--- a/Sightings_Map.html
+++ b/Sightings_Map.html
@@ -18,6 +18,7 @@
 
 <body>
 
+
   <!-- Start of background -->
   <!-- Create a <canvas> element -->
   <canvas id="canvas-image-blending"></canvas>
@@ -27,28 +28,27 @@
   <script src="static/js/visualization_bg.js"></script>
   <!-- End of background -->
 
+
+
   <!-- Start of navbar -->
   <script>$(function() {$("#navbarHtml").load("static/html/navbar.html");});</script><div id="navbarHtml"></div>
   <!-- End of navbar -->
 
+
+
   <!-- Start of Visualization -->
   <div class="container-fluid">
     <div class="row justify-content-center">
-      <div class="col-md-5 content-background">
+      <div class="col-md-11 content-background">
         <!-- Start of State Pie Chart -->
-        <h3 id="selectedStateName">ALABAMA  </h3><select id="selectedStateAbbrev" onchange="optionChanged(this.value)"></select>
-        <div id="statePieChart"></div>
-        <!-- End of State Pie Chart -->
-      </div>
-      <div class="col-md-5 content-background">
-        <!-- Start of National Pie Chart -->
-        <h3>UNITED STATES</h3>
-        <div id="usPieChart"></div>
+        <h1>Hello World!</h1>
         <!-- End of State Pie Chart -->
       </div>
     </div>
   </div>
   <!-- End of Visualization -->
+
+
 
   <div id="footer">
     <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank">
@@ -58,8 +58,8 @@
 
   <script src="https://d3js.org/d3.v5.min.js"></script>
   <script src='https://cdn.plot.ly/plotly-2.16.1.min.js'></script>
-  <script src="./static/js/usStates.js"></script>
-  <script src="./static/js/UFO_shapes.js"></script>
+  <!-- <script src="./static/js/usStates.js"></script> -->
+  <script src="./static/js/Sightings_Map.js"></script>
 
 </body>
 
