--- a/static/html/navbar.html
+++ b/static/html/navbar.html
@@ -9,7 +9,7 @@
                 <a href="UFO_shapes.html" class="content-background">UFO Shapes</a> <!-- pie charts -->
             </li>
             <li class="nav-item">
-                <a href="Sightings_by_Time_of_Day.html" class="content-background">Sightings by Time of Day</a>
+                <a href="Sightings_Trends.html" class="content-background">Sightings by Time of Day</a>
             </li>
         </ul>
     </div>
