--- a/static/html/navbar.html
+++ b/static/html/navbar.html
@@ -1,15 +1,19 @@
 <nav class="navbar navbar-expand m-0 p-0">
-    <a href="{{url_for('/')}}" class="content-background" id="home-button">Home</a>
+    <!-- <a href="{{url_for('/')}}" class="content-background" id="home-button">Home</a> -->
+    <a href="/" class="content-background" id="home-button">Home</a>
     <div class="collapse navbar-collapse justify-content-end" id="main-nav">
         <ul class="navbar-nav">
             <li class="nav-item">
-                <a href="{{url_for('Sightings_Map')}}" class="content-background">Sightings Heatmap</a>
+                <!-- <a href="{{url_for('Sightings_Map')}}" class="content-background">Sightings Heatmap</a> -->
+                <a href="Sightings_Map" class="content-background">Sightings Heatmap</a>
             </li>
             <li class="nav-item">
-                <a href="{{url_for('UFO_shapes')}}" class="content-background">UFO Shapes</a> <!-- pie charts -->
+                <!-- <a href="{{url_for('UFO_shapes')}}" class="content-background">UFO Shapes</a> -->
+                <a href="UFO_Shapes" class="content-background">UFO Shapes</a>
             </li>
             <li class="nav-item">
-                <a href="{{url_for('Sightings_Trends')}}" class="content-background">Sightings by Time of Day</a>
+                <!-- <a href="{{url_for('Sightings_Trends')}}" class="content-background">Sightings by Time of Day</a> -->
+                <a href="Sightings_Trends" class="content-background">Sightings by Time of Day</a>
             </li>
         </ul>
     </div>
