implemented the charts

--- a/static/html/navbar.html
+++ b/static/html/navbar.html
@@ -13,7 +13,7 @@
             </li>
             <li class="nav-item">
                 <!-- <a href="{{url_for('Sightings_Trends')}}" class="content-background">Sightings by Time of Day</a> -->
-                <a href="Sightings_Trends" class="content-background">Sightings by Time of Day</a>
+                <a href="Sightings_Trends" class="content-background">Sightings by Trends</a>
             </li>
         </ul>
     </div>
