--- a/static/html/navbar.html
+++ b/static/html/navbar.html
@@ -5,7 +5,7 @@
         <ul class="navbar-nav">
             <li class="nav-item">
                 <!-- <a href="{{url_for('Sightings_Map')}}" class="content-background">Sightings Heatmap</a> -->
-                <a href="Sightings_Map" class="content-background">Sightings Heatmap</a>
+                <a href="Sightings_Map" class="content-background">Sightings Map</a>
             </li>
             <li class="nav-item">
                 <!-- <a href="{{url_for('UFO_shapes')}}" class="content-background">UFO Shapes</a> -->
