edits to deploy

--- a/Sightings_Map/index.html
+++ b/Sightings_Map/index.html
@@ -46,7 +46,7 @@
 
 </head>
 
-<body>
+<body background="/Group-Project-3/static/img/bg-forest-fullscreen.jpg">
 
     <nav class="navbar navbar-expand m-0 p-0 bg-transparent">
         <div class="container-fluid m-0 p-0">
