--- a/UFO_shapes/index.html
+++ b/UFO_shapes/index.html
@@ -29,7 +29,7 @@
 
 </head>
 
-<body>
+<body background="/Group-Project-3/static/img/bg-forest-fullscreen.jpg">
 
     <nav class="navbar navbar-expand m-0 p-0 bg-transparent">
         <div class="container-fluid m-0 p-0">
@@ -85,7 +85,7 @@
 <script src='https://cdn.plot.ly/plotly-2.16.1.min.js'></script>
 
 <script src="/Group-Project-3/static/js/usStates.js"></script>
-<script src="/Group-Project-3/static/js/UFO_Shapes.js"></script>
+<script src="/Group-Project-3/static/js/UFO_shapes.js"></script>
 
 
 
