--- a/index.html
+++ b/index.html
@@ -20,8 +20,11 @@
 
     <!-- Our own CSS stylesheet -->
     <link rel="stylesheet" href="/Group-Project-3/static/css/styles.css" media="screen">
-    <meta name="keywords" content="css3, html5, js, background video, fullscreen video">
+    <meta name="keywords" content="css3, html5, js, background video, fullscreen video, bootstrap-icons">
     <meta name="description" content="description">
+
+    <!-- Bootstrap Icons -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css">
 
     
 <script src="https://use.typekit.net/nlq1kdt.js"></script>
@@ -37,6 +40,9 @@
             <a href="/Group-Project-3/" class="content-background" id="home-button">Home</a>
             <div class="collapse navbar-collapse justify-content-end" id="main-nav">
                 <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a href="https://github.com/scheaton/Group-Project-3" class="content-background">GitHub</a>
+                    </li>
                     <li class="nav-item">
                         <a href="/Group-Project-3/Sightings_Map/" class="content-background">Sightings Map</a>
                     </li>
@@ -59,7 +65,7 @@
   <section class="content-background" id="index_page">
     <div>
       <h1>WE ARE NOT ALONE</h1>
-      <p>In 2022 alone, there were <strong>4.3k</strong> reported UFO sightings in the United States. Click around for some visualizations.</p>
+      <p>In 2022, there were <strong>4.3k</strong> reported UFO sightings in the United States. Click around for some visualizations.</p>
     </div>
   </section>
 </div>
