github icon added

--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
 
     <!-- Bootstrap Icons -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css">
-
+    <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css'>
+   
     
 <script src="https://use.typekit.net/nlq1kdt.js"></script>
 <script>try { Typekit.load({ async: true }); } catch (e) { }</script>
@@ -41,7 +42,7 @@
             <div class="collapse navbar-collapse justify-content-end" id="main-nav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a href="https://github.com/scheaton/Group-Project-3" class="content-background">GitHub</a>
+                        <a href="https://github.com/scheaton/Group-Project-3" class="content-background" target="blank"><i class='fa fa-github'></i></a>
                     </li>
                     <li class="nav-item">
                         <a href="/Group-Project-3/Sightings_Map/" class="content-background">Sightings Map</a>
