--- a/Sightings_Trends/index.html
+++ b/Sightings_Trends/index.html
@@ -25,7 +25,8 @@
 
     <!-- Bootstrap Icons -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css">
-
+    <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css'>
+   
     
 <script>const url = "/Group-Project-3/api/v1.0/sightings/";</script>
 <script>const state_url = "/Group-Project-3/api/v1.0/sightingsbystate/";</script>
@@ -43,7 +44,7 @@
             <div class="collapse navbar-collapse justify-content-end" id="main-nav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a href="https://github.com/scheaton/Group-Project-3" class="content-background">GitHub</a>
+                        <a href="https://github.com/scheaton/Group-Project-3" class="content-background" target="blank"><i class='fa fa-github'></i></a>
                     </li>
                     <li class="nav-item">
                         <a href="/Group-Project-3/Sightings_Map/" class="content-background">Sightings Map</a>
